testdata/test/resources/com/yafred/asn1/test/should_fail/untagged_any_in_set.asn
-- FAILS: ambiguity between field and fieldId

My-module DEFINITIONS  ::=
BEGIN

  Sequence-3 ::= SET {
      fieldId OBJECT IDENTIFIER,
      field ANY DEFINED BY fieldId 
  }

END
